fix: <Canvas> 'overflow: auto' to fix resize issue

--- a/src/styles/Canvas.module.css
+++ b/src/styles/Canvas.module.css
@@ -5,4 +5,5 @@
   min-width: 50vw;
   resize: both;
   margin: 2rem 0 0;
+  overflow: auto;
 }
